# auth-microservice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.windsurf/: architecture-rules.yml
.windsurf/contexts/: architecture-context.md  project-context.md
.windsurf/flows/: create-feature.md
.windsurf/memories/: architecture-decisions.md  project-history.md
.windsurf/plans/: hexagonal-architecture-restructure-ca20e8.md
.windsurf/rules/: architecture.yml  coding-standards.yml
.windsurf/skills/: create-adapter.md  create-repository.md  create-service.md  create-tests.md
.windsurf/workflows/: create-adapter.md  create-endpoint.md  create-feature.md  create-handler.md  create-test.md  migrate-architecture.md  refine-prompt.md
documentation/: PROJECT_ARCHITECTURE.md  TEST_STRUCTURE.md
src/: main.py
src/app/: dependencies_container.py
src/app/adapters/: auth_adapter.py
src/app/adapters/database/: __init__.py  user_adapter.py
src/app/adapters/messaging/: __init__.py  rabbitmq_adapter.py
src/app/adapters/security/: __init__.py  jwt_adapter.py  password_adapter.py
src/app/domain/entities/: __init__.py  event_message.py  token.py  token_payload.py  user.py
src/app/domain/ports/: __init__.py  event_publisher_port.py  password_hasher_port.py  token_provider_port.py  (+1 more)
src/app/settings/: __init__.py  app_settings.py
tests/unit/: test_adapters_architecture.py  test_architecture_rules.py  test_auth_service_simple_coverage.py  test_basic_structure.py  test_integration.py  test_main.py  test_main_full_coverage.py  test_main_simple.py  test_main_simple_coverage.py  test_main_unit.py
tests/unit/app/: main_test.py  simple_coverage_boost.py  test_architecture_compliance.py  test_dependencies_container.py  test_dependencies_container_final.py
(+44 files in other folders)
